# pete-redux

./: CMakeLists.txt  Makefile  ProjectHome.md  README  Screenshots.md  animation.cpp  animation.h  bat.h  bullet.cpp  bullet.h  bulletwrap.cpp  bulletwrap.h  ctvec3.cpp  damagetaker.h  draw.h  enemy_template.h  gameobject.cpp  gameobject.h  gamestate.cpp  gamestate.h  level.h  leveltest.txt  petemain.cpp  physicsobject.cpp  physicsobject.h  platformai.cpp  platformai.h  player.cpp  player.h  soul.h  statemachineobject.cpp  statemachineobject.h  texture.cpp  texture.h  tileset.cpp  zombie.cpp  zombie.h
gfx/: ammo  bat  boss_arena.xcf  darkchampion  medpack  player  soul  zombie
glsl/: text.vert
levels/: aitest.txt  (+7 more)
src/: CMakeLists.txt  ammo.cpp  ammo.h  animation.cpp  animation.h  bat.cpp  bat.h  bullet.cpp  bullet.h  darkchampion.cpp  darkchampion.h  debug.h  draw.h  editor.cpp  editor.h  exit.h  flipnumber.cpp  gameobject.cpp  gameobject.h  gamestate.cpp  gamestate.cpp_temp  gamestate.h  keystates.h  level.h  medpack.h  monsterfactory.cpp  objecttypes.h  pathgraph.h  peteconfig.h  petemain.cpp  player.cpp  player.h  shader.cpp  shader.h  soul.cpp  statemachineobject.cpp  statemachineobject.h  textwriter.cpp  textwriter.h  zombie.cpp  (+1 more)
trunk/: CMakeLists.txt  Makefile  README  animation.cpp  animation.h  bat.cpp  bullet.h  ctvec3.h  gameobject.cpp  gameobject.h  gamestate.cpp  gamestate.h  keystates.h  level.cpp  level1.txt  petemain.cpp  physicsobject.cpp  physicsobject.h  platformai.cpp  player.cpp  player.h  soul.cpp  statemachineobject.cpp  statemachineobject.h  zombie.cpp  zombie.h
trunk/gfx/: ammo  bat  darkchampion  exit  numbers  soldier  soul  zombie
trunk/gfx/editor/: tokens
trunk/glsl/: text.frag
trunk/levels/: aitest.txt  level1.txt  level2.txt  level3.txt  level5.txt  level6.txt  level7.txt
trunk/src/: CMakeLists.txt  ammo.cpp  ammo.h  animation.cpp  bat.cpp  bat.h  darkchampion.cpp  darkchampion.h  debug.h  dijkstra.h  draw.h  editor.cpp  editor.h  exit.cpp  flipnumber.cpp  flipnumber.h  gameobject.cpp  gameobject.h  gamestate.cpp  gamestate.h  level.cpp  level.h  medpack.cpp  monsterfactory.h  petemain.cpp  physicsobject.h  player.cpp  player.h  soldier.cpp  soldier.h  soul.h  statemachineobject.cpp  statemachineobject.h  texture.cpp  textwriter.cpp  textwriter.h  zombie.cpp  zombie.h
(+29 files in other folders)
